# svm-tools

./: BSD-3-Clause.txt  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt
GPLv3.files/: LICENSE  svm-rootfs-askpass
dockerfiles/: Dockerfile.alpine-3.8  Dockerfile.fc31  README  build-svm-tool-dockerfile.fc31
docs/: README  README.ESM  svm-tool-notes.rst
svm-password-agent/: Makefile  README
svm-password-agent/fedora/: svm-password-agent.spec
svm-password-agent/fedora/dracut/modules.d/98svm/: module-setup.sh  svm-rootfs-askpass  svm-rootfs-hook.sh
svm-password-agent/src/: Makefile  esmb-get-file.c  ucall.S
svm-password-agent/ubuntu/: README  ibm-svm  pef_svm_keyscript  svm-setup
svm_tool/: __main__.py  svm_tool.py
svm_tool/esm/: __main__.py  esm.py
svm_tool/esm_digest/: __main__.py  esm_digest.py  rtas_sha512.py
svm_tool/svm/: __init__.py  __main__.py  svm.py
tests/: test_svm_tool.py
tests/attachments/guest/: file-1.json  file-2.json  test_json_write.py
tests/cfg_files/: svm_blob.yml  test_yml.py
tests/keys/owner/: rsaprivkey  rsapubkey
tests/keys/tpm/: rsapubkey.pem
